# ocr_demo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  demo.py  requirements.txt  set_env.sh
.github/workflows/: public-mirror.yml
benchmark/: CMakeLists.txt  benchmark.cpp
benchmark/results/: DXNN-OCR_benchmark_report.md  image_10_result.json  image_11_result.json  image_12_result.json  image_13_result.json  image_14_result.json  image_15_result.json  image_16_result.json  image_17_result.json  image_18_result.json  image_19_result.json  image_1_result.json  image_20_result.json  image_2_result.json  image_3_result.json  image_4_result.json  image_5_result.json  image_6_result.json  image_7_result.json  image_8_result.json  image_9_result.json
benchmark/results_mobile/: DXNN-OCR_benchmark_report.md  image_10_result.json  image_11_result.json  image_12_result.json  image_13_result.json  image_14_result.json  image_15_result.json  image_16_result.json  image_17_result.json  image_18_result.json  image_19_result.json  image_1_result.json  image_20_result.json  image_2_result.json  image_3_result.json  image_4_result.json  image_5_result.json  image_6_result.json  image_7_result.json  image_8_result.json  image_9_result.json
engine/: draw_utils.py  paddleocr.py  utils.py
scripts/: dxnn_benchmark.py  ocr_engine.py
server/: CMakeLists.txt  README.md  file_handler.cpp  file_handler.h  json_response.cpp  json_response.h  ocr_handler.cpp  ocr_handler.h  server_main.cpp  test.py  test_client.py  需求文档.md
server/webui/: README.md  app.py
src/common/: geometry.cpp  (+1 more)
(+13 files in other folders)
